# FinTrack

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  main.py  parsing_tools.py  portfolio.py  pyproject.toml  requirements.txt  setup.py  test.py  tools.py
src/FinTrack/: __init__.py  config.py  errors.py  logger.py  parsing_tools.py  portfolio.py  validation.py  yf_tools.py
tests/: conftest.py  test_errors_and_config.py  test_portfolio.py  test_validation.py
